--- a/cluster/dev/source.yaml
+++ b/cluster/dev/source.yaml
@@ -9,3 +9,17 @@ spec:
   ref:
     branch: main
   url: https://github.com/gowtham014/kong-deployment.git
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: "true"
+  namespace: flux-system
+spec:
+  interval: 1m0s
+  path: ./
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: kong-deployment
